<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Login">

    <TextView
        android:id="@+id/login_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" L O G I N "
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/login_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="150dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225"
        app:srcCompat="@drawable/icon_blue" />

    <EditText
        android:id="@+id/input_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_icon"
        app:layout_constraintVertical_bias="0.0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:ems="10"
        android:hint="Login"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="259dp" />

    <EditText
        android:id="@+id/input_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_login"
        app:layout_constraintVertical_bias="0.034"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="319dp" />

    <Button
        android:id="@+id/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        app:layout_constraintVertical_bias="0.0"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/limegreen"
        android:shadowColor="@color/white"
        android:text="Login"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="412dp" />

    <Button
        android:id="@+id/btn_signup"
        app:backgroundTint="#F2C820"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.0"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="478dp" />

    <TextView
        android:id="@+id/forget_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.798"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup"
        app:layout_constraintVertical_bias="0.058"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forget Password?"
        android:textColor="#03bafc"
        tools:layout_editor_absoluteX="217dp"
        tools:layout_editor_absoluteY="550dp" />

</androidx.constraintlayout.widget.ConstraintLayout>