<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignUp">

    <TextView
        android:id="@+id/signup_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" S I G N  U P "
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <ImageView
        android:id="@+id/signup_icon"
        android:layout_width="150dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_txt"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/icon_blue" />

    <EditText
        android:id="@+id/reg_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="452dp"
        android:width="250dp"
        android:ems="10"
        android:hint="Your Name"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_icon"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/reg_username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="364dp"
        android:width="250dp"
        android:ems="10"
        android:hint="Your Username"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/reg_passwd"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:width="250dp"
        android:ems="10"
        android:hint="Your New Password"
        android:inputType="textPassword"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_username"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/reg_alamat"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:width="250dp"
        android:ems="10"
        android:hint="Your Home Address"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_passwd"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="252dp"
        android:width="250dp"
        android:ems="10"
        android:hint="youremail@domain.com"
        android:inputType="textEmailAddress"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_alamat"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/reg_phonenumber"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Your Phone Number"
        android:inputType="phone"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_email"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:text="Sign Up"
        android:textColor="@color/white"
        app:backgroundTint="#32cf32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_phonenumber"
        app:layout_constraintVertical_bias="0.106" />

</androidx.constraintlayout.widget.ConstraintLayout>