<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/icon_home"
        android:icon="@drawable/icons8_home_page"
        android:enabled="true"
        android:title="Home" />
    <item
        android:id="@+id/icon_history"
        android:icon="@drawable/icons8_order_history"
        android:enabled="true"
        android:title="History" />
    <item
        android:id="@+id/icon_cart"
        android:icon="@drawable/icon8_cart"
        android:enabled="true"
        android:title="Cart" />
    <item
        android:id="@+id/icon_setting"
        android:icon="@drawable/icons8_gear"
        android:enabled="true"
        android:title="Setting" />
</menu>