<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.MainHome">

    <TextView
        android:id="@+id/login_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#2AB3E5"
        android:gravity="center|end"
        android:paddingRight="10dp"
        android:textColor="@color/white"
        android:text="Hello !"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/notify_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:clickable="true"
        android:src="@drawable/icons8_notifications"
        app:layout_constraintBottom_toBottomOf="@+id/navigationBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.014"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/invite_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:clickable="true"
        android:src="@drawable/icons8_add_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toEndOf="@+id/notify_icon"
        app:layout_constraintTop_toTopOf="@+id/login_name"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/video_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:clickable="true"
        android:src="@drawable/icons8_video"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toEndOf="@+id/invite_icon"
        app:layout_constraintTop_toTopOf="@+id/login_name"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@color/white"/>

    <!--    <TextView-->
<!--        android:id="@+id/play_song"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="30dp"-->
<!--        android:layout_margin="10dp"-->
<!--        android:clickable="true"-->
<!--        android:text="Play"-->
<!--        android:textSize="15sp"-->
<!--        android:textColor="@color/white"-->
<!--        android:gravity="center"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.025"-->
<!--        app:layout_constraintStart_toEndOf="@+id/invite_icon"-->
<!--        app:layout_constraintTop_toTopOf="@+id/login_name"-->
<!--        app:layout_constraintVertical_bias="0.0"/>-->

<!--    <ImageView-->
<!--        android:id="@+id/stop_song"-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:layout_margin="10dp"-->
<!--        android:clickable="true"-->
<!--        android:src="@drawable/flaticon_mute"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.036"-->
<!--        app:layout_constraintStart_toEndOf="@+id/play_song"-->
<!--        app:layout_constraintTop_toTopOf="@+id/login_name"-->
<!--        app:layout_constraintVertical_bias="0.0"-->
<!--        app:tint="@color/white"/>-->

    <ImageView
        android:id="@+id/banner"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/veggies_opt"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="#8BF476"
        android:gravity="center"
        android:text="Veggies"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/food_opt"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="#FFD4A0"
        android:gravity="center"
        android:text="Food"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/veggies_opt"
        app:layout_constraintTop_toBottomOf="@+id/banner"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/drink_opt"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="#C3FFF4"
        android:gravity="center"
        android:text="Drinks"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/veggies_opt"
        app:layout_constraintVertical_bias="0.16" />

    <TextView
        android:id="@+id/others_opt"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="#FAFFC2"
        android:gravity="center"
        android:text="Others"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/drink_opt"
        app:layout_constraintTop_toBottomOf="@+id/food_opt"
        app:layout_constraintVertical_bias="0.16" />


</androidx.constraintlayout.widget.ConstraintLayout>