...
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_alamat_label"
        app:layout_constraintVertical_bias="0.037" />

    <EditText
        android:id="@+id/edit_new_alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="Alamat Baru"
        android:inputType="textPersonName"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toEndOf="@+id/edit_new_alamat_label"
        app:layout_constraintTop_toBottomOf="@+id/my_new_alamat" />

    <Button
        android:id="@+id/btn_edit_submit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/limegreen"
        android:text="Submit"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
...
